# outbox_research

./: plan
1_initiate_db/: pyproject.toml  schema.py
2_first_records/: insert_data.py  pyproject.toml
3_connect_nats/: 1_pub_sub.py  2_pub_sub.py  connect_nats.py
4_pupsub_nats/: 3_service.py
5_outbox_to_nats/: 1_pub_after_insert.py
6_outbox_with_nats/: 1_pub_after_insert.py  pyproject.toml
6_outbox_with_nats/1/: client.py  main.py  server.py  subscribers.py
6_outbox_with_nats/2/: client.py  main.py  schema.py  server.py  subscribers.py
migrations/: sqitch.conf  sqitch.plan
migrations/deploy/: create_schema.sql  outbox.sql  x_uuid_ossp.sql
migrations/revert/: create_schema.sql  outbox.sql  x_uuid_ossp.sql
migrations/verify/: create_schema.sql  outbox.sql  x_uuid_ossp.sql
